bynkc/tests/fixtures/positive/375_commons_generic_record_workers/src/shop/api.bynk
context shop.api

uses shop.envelope

service users {
  on call(page: Paginated[User]) -> Effect[Result[Paginated[User], ()]] {
    Ok(page)
  }
}
